# selvra-brain

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: _browser.py  alive_world.py  curious_world.py  face_alive.py  genome_demo.py  predictive_face.py
src/selvra_brain/: __init__.py
src/selvra_brain/affect/: __init__.py
src/selvra_brain/agency/: __init__.py  action_model.py  attention_schema.py  curiosity.py  types.py
src/selvra_brain/body/: __init__.py
src/selvra_brain/core/: __init__.py  epistemic.py  events.py
src/selvra_brain/genome/: __init__.py  birth.py  builder.py  genome.py
src/selvra_brain/metacognition/: __init__.py  monitor.py
src/selvra_brain/perception/: __init__.py  scene.py
src/selvra_brain/prediction/: __init__.py  engine.py  predictor.py
src/selvra_brain/visualization/: __init__.py  state.py
src/selvra_brain/workspace/: __init__.py  global_workspace.py  producers.py  types.py
src/selvra_brain/world/: __init__.py  agent.py  symbol_world.py
tests/unit/: test_agency_action_model.py  test_agency_attention_schema.py  test_agency_curiosity.py  test_epistemic.py  test_events.py  test_genome.py  test_metacognition.py  test_perception_scene.py  test_predictive_engine.py  test_predictor.py  test_visualization_state.py  test_workspace.py  test_world.py
viz/: README.md  index.html  state.json
